infrastructure/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: test-app
  name: test-app
  namespace: restaurant-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-app
    spec:
      containers:
      - image: us-central1-docker.pkg.dev/third-wharf-422315-u9/restaurant-demo/app:latest
        name: app
        resources: {}
status: {}
