infrastructure/service-test-app.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: test-app
  name: test-app
  namespace: restaurant-demo
spec:
  ports:
  - name: 8080-5000
    port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    app: test-app
  type: ClusterIP
status:
  loadBalancer: {}
