infrastructure/service-test-db.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: test-db
  name: test-db
  namespace: restaurant-demo
spec:
  ports:
  - name: 3306-3306
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: test-db
  type: ClusterIP
status:
  loadBalancer: {}
