infrastructure/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingdefault
  namespace: restaurant-demo
spec:
  ingressClassName: nginx
  rules:
  - host: restaurant.example.com
    http:
      paths:
      - backend:
          service:
            name: test-app
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
